--- a/src/main/resources/templates/cake.html
+++ b/src/main/resources/templates/cake.html
@@ -6,19 +6,80 @@
     <meta charset="UTF-8">
     <title>CAKE</title>
     <link th:rel="stylesheet" th:href="@{css/bootstrap.min.css}">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link th:rel="stylesheet" th:href="@{css/mystyle.css}">
+    <link href="https://fonts.googleapis.com/css2?family=Mali:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-<div layout:fragment="content">
-
+<div layout:fragment="content" class="container">
     <center>
-        <img src="images/Cake1.jpg" width="440">
-        <img src="images/Cake2.jpg" width="440">
-        <img src="images/Cake3.jpg" width="440">
+        <div class="jumbotron">
+            <img src="images/Cake1.jpg" width="25%">
+            <br>
+            <br>
+            <h4>DOUBLE FROMAGE</h4>
+            <br>1 ชิ้น 100 กรัม ราคา 60 ฿ / 1 ปอนด์ 1200 กรัม ราคา 400 ฿</br>
+        </div>
+        <div class="jumbotron">
+            <img src="images/Cake2.jpg" width="25%">
+            <br>
+            <br>
+            <h4>CHOCOLATE DRIPCAKE</h4>
+            <br>1 ชิ้น 100 กรัม ราคา 60 ฿ / 1 ปอนด์ 1200 กรัม ราคา 350 ฿</br>
+
+        </div>
+        <div class="jumbotron">
+            <img src="images/Cake3.jpg" width="25%">
+            <br>
+            <br>
+            <h4>CARAMEL SHORT CAKE</h4>
+            <br>1 ชิ้น 100 กรัม ราคา 55 ฿ / 1 ปอนด์ 1200 กรัม ราคา 350 ฿</br>
+        </div>
+        <div class="jumbotron">
+            <img src="images/Cake4.jpg" width="25%">
+            <br>
+            <br>
+            <h4>GRAPE SHORT CAKE</h4>
+            <br>1 ชิ้น 100 กรัม ราคา 60 ฿ / 1 ปอนด์ 1200 กรัม ราคา 350 ฿</br>
+        </div>
+        <div class="jumbotron">
+            <img src="images/Cake5.jpg" width="25%">
+            <br>
+            <br>
+            <h4>BLUEBERRY CHOUSE CAKE</h4>
+            <br>1 ชิ้น 100 กรัม ราคา 65 ฿ / 1 ปอนด์ 1200 กรัม ราคา 380 ฿</br>
+        </div>
+        <div class="jumbotron">
+            <img src="images/Cake6.jpg" width="25%">
+            <br>
+            <br>
+            <h4>LEMON CHOUSE CAKE</h4>
+            <br>1 ชิ้น 100 กรัม ราคา 50 ฿ / 1 ปอนด์ 1200 กรัม ราคา 320 ฿</br>
+        </div>
+        <div class="jumbotron">
+            <img src="images/Cake7.jpg" width="25%">
+            <br>
+            <br>
+            <h4>PEACH & MILKTEA MOUSE CAKE</h4>
+            <br>1 ชิ้น 100 กรัม ราคา 50 ฿ / 1 ปอนด์ 1200 กรัม ราคา 320 ฿</br>
+        </div>
+        <div class="jumbotron">
+            <img src="images/Cake8.jpg" width="25%">
+            <br>
+            <br>
+            <h4>STRAWBERRY SHORT CAKE</h4>
+            <br>1 ชิ้น 100 กรัม ราคา 60 ฿ / 1 ปอนด์ 1200 กรัม ราคา 350 ฿</br>
+        </div>
+        <div class="jumbotron">
+            <img src="images/Cake9.jpg" width="25%">
+            <br>
+            <br>
+            <h4>BLACKBERRY SHORT CAKE</h4>
+            <br>1 ชิ้น 100 กรัม ราคา 60 ฿ / 1 ปอนด์ 1200 กรัม ราคา 350 ฿</br>
+
+
+        </div>
     </center>
 </div>
-
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script th:src="@{js/bootstrap.min.js}"></script>
