--- a/src/main/resources/static/css/mystyle.css
+++ b/src/main/resources/static/css/mystyle.css
@@ -82,7 +82,8 @@ body {
   font-family: 'Bitter', sans-serif;
 }
 .content {
-  height: 200px;
+  width: 100%
+  height: 50px;
 }
 a { text-decoration: none; }
 
@@ -124,7 +125,7 @@ a { text-decoration: none; }
   display: inline-block;
   position: relative;
   font-size: 14;
-  color: #def1f0;
+  color: #D2691E;
 }
 
 .nav-xbootstrap li a {
@@ -199,7 +200,7 @@ a { text-decoration: none; }
  @media only screen and (max-width:900px) {
 
 .nav-xbootstrap {
-  background: #fff;
+  background: #D2691E;
   width: 200px;
   height: 100%;
   display: block;
@@ -246,7 +247,7 @@ a { text-decoration: none; }
   position: absolute;
   top: 0px;
   left: 0px;
-  background: #03A9F4;
+  background: #D2691E;
   padding: 12px 0 0 10px;
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
@@ -294,13 +295,13 @@ a { text-decoration: none; }
 .nav-xbootstrap li ul.dropdown { position: relative; }
 
 .nav-xbootstrap li ul.dropdown li a {
-  background: #2980B9 !important;
+  background: #D2691E !important;
   border-bottom: none;
   color: #fff !important;
 }
 
 .nav-xbootstrap li:hover a {
-  background: #03A9F4;
+  background: #D2691E;
   color: #fff !important;
 }
 
@@ -339,5 +340,9 @@ a { text-decoration: none; }
   right: 0;
   left: 0;
 }
+
+
+
+
 
 
